# bmc_restful

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cgocommon/: fan.go  go.mod  hwmon.go
debian/: changelog  control  rules
go-server/: go.mod  main.go
go-server-server/: go.mod
go-server-server/go/: auth.go  util.go
go-server/go/: default.go  flags.go  models.go  persistent.go  routers.go
libcgocommon/: CMakeLists.txt  Makefile  main.cpp
libcgocommon/include/capi/: access.h  chips.h  error.h  fan.h  general.h  hwmon.h  sysfs.h
libcgocommon/src/: access.cpp  chips.cpp  error.cpp  fan.cpp  general.cpp  hwmon.cpp  sysfs.cpp
